<resources>

    <string name="flower_valley">Flower Valley</string>
    <string name="app_name">Flower Valley</string>
    <string name="flower_valley1">Flower Valley</string>
    <string name="log_in">Log in</string>
    <string name="to_your_account">to your account</string>
    <string name="email_address">Email Address</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="forget_password">Forget Password</string>
    <string name="password1">Password</string>
    <string name="dont_t_have_an_account">Dont\'t have an account?</string>
    <string name="sign_in">Sign in</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello Profile fragment</string>
    <string name="create_account">Create Account</string>
    <string name="name">Name</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="email_or_phone_no">Email Or Phone No</string>
    <string name="sign_up">Sign UP</string>
    <string name="popular_items">Popular Items</string>
    <string name="view_all">View All</string>
    <string name="angle_rose">Angle</string>
    <string name="angle">Angle</string>
    <string name="rose">Rose</string>
    <string name="popular_flowers">Popular Flowers</string>
    <string name="mobile">Mobile</string>
    <string name="email_address_hint">Email Address</string>
    <string name="verify">Verify</string>
    <string name="verify_otp">Verify OTP</string>
    <string name="don_t_have_an_account">Don\'t have an Account</string>
    <string name="show_more">SHOW MORE</string>
    <string name="enter_mobile_number">Enter Mobile Number</string>
    <string name="create_your_account">Create Your Account</string>
    <string name="enter_your_name">Enter Your Name</string>
    <string name="fill_the_information_below">Fill the information below</string>
    <string name="phone_number">Phone Number</string>
    <string name="go_to_payment"><![CDATA[GO TO PAYMENT -->]]></string>
    <string name="register">Register</string>
    <string name="add_to_cart">Add to Cart</string>
    <string name="red_rose">Red Rose</string>
    <string name="angle_flower_bouquet">Angle Flower Bouquet</string>
    <string name="checkout">Checkout</string>

        <string name="key_id">rzp_test_Feo6ev1HECbk7p</string>  // ----  Use for testing key
<!--    <string name="key_id">rzp_live_58RJgkUOse8qR8</string>--> // ----  Use for real Payment key
    <string name="key_secret">qFwyhIe92RgBk4wwizcGcO9T</string>
    <string name="district">District</string>
    <string name="city">City</string>
    <string name="state">State</string>
    <string name="postal_code">Postal Code</string>
    <string name="contact_number">Contact Number</string>
    <string name="add_new_address">Add New Address</string>


</resources>