<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#00a67a"
    android:id="@+id/fragment_login"
    tools:context=".fragment.LoginFragment">




    <androidx.appcompat.widget.AppCompatImageView

        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/flower_valley_splash">

    </androidx.appcompat.widget.AppCompatImageView>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/app_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="26dp"
        android:gravity="center"
        android:orientation="vertical">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/logo"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_centerInParent="true"
            android:src="@drawable/flower_valley_logo" />

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/logo"
            android:layout_centerHorizontal="true"
            android:fontFamily="@font/poppins_medium"
            android:text="@string/app_name"
            android:textColor="@color/white"
            android:textSize="22sp" />


    </androidx.appcompat.widget.LinearLayoutCompat>


    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/app_bar"
        android:layout_marginTop="28dp"
        android:background="@drawable/view_all_recycler_bg"
        android:orientation="vertical">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/otp_login_icon"
            android:layout_width="105dp"
            android:layout_height="85dp"
            android:layout_gravity="center"
            android:layout_marginTop="28dp"
            android:src="@drawable/login_otp_icon" />

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="36dp"
            android:layout_marginEnd="16dp"
            android:gravity="center">

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:fontFamily="@font/poppins_medium"
                android:text="@string/login"
                android:textColor="@color/green_200"
                android:textSize="20sp" />

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:layout_marginStart="8dp"
                android:fontFamily="@font/poppins_medium"
                android:text="@string/to_your_account"
                android:textSize="16sp" />

        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="26dp"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="16dp">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textField"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:hint="@string/mobile"
                app:boxBackgroundColor="@color/white"
                app:startIconDrawable="@drawable/ic_call">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/mobile"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    android:maxLength="10" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_login"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                android:layout_width="130dp"
                android:layout_height="50dp"
                android:layout_marginTop="16dp"
                android:text="@string/login"
                android:textColor="@color/green_700" />
        </androidx.appcompat.widget.LinearLayoutCompat>


    </androidx.appcompat.widget.LinearLayoutCompat>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/sign_up_text_dont_have_an_account"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="28dp"
        android:layout_marginBottom="28dp"
        android:text="@string/don_t_have_an_account"
        android:textColor="@color/black"
        android:textSize="18sp" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/sign_up"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginLeft="8dp"
        android:layout_marginBottom="28dp"
        android:layout_toEndOf="@id/sign_up_text_dont_have_an_account"
        android:text="@string/sign_up"
        android:textColor="@color/green_700"
        android:textSize="18sp" />


</RelativeLayout>