<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/green_700"
    tools:context=".fragment.ProfileFragment">


    <androidx.appcompat.widget.AppCompatImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/flower_valley_splash"/>


    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/app_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="26dp"
        android:gravity="center"
        android:orientation="vertical">


        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/logo"
            android:layout_centerHorizontal="true"
            android:fontFamily="@font/poppins_medium"
            android:text="Checkout"
            android:textColor="@color/white"
            android:textSize="22sp" />


    </androidx.appcompat.widget.LinearLayoutCompat>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/app_bar"
        android:layout_marginTop="8dp"
        android:background="@drawable/view_all_recycler_bg"
        android:orientation="vertical">

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginTop="12dp"
            android:fontFamily="@font/poppins_medium"
            android:text="@string/fill_the_information_below"
            android:textColor="@color/green_700"
            android:textSize="16sp" />

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="415dp"
            android:layout_marginLeft="28dp"
            android:layout_marginTop="5dp"
            android:layout_marginRight="28dp"
            android:layout_marginBottom="28dp"
            android:background="@color/white">


            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="6dp"
                android:layout_marginTop="2dp"
                android:layout_marginRight="6dp"
                android:gravity="center"
                android:orientation="vertical">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/profile_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/enter_your_name"
                    app:boxBackgroundColor="@color/white"
                    app:startIconDrawable="@drawable/ic_person">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/name_profile"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textPersonName"
                        android:maxLength="28" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/profile_phone_number"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="2dp"
                    android:hint="@string/phone_number"
                    app:boxBackgroundColor="@color/white"
                    app:startIconDrawable="@drawable/ic_call">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/profile_ph_number"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="number"
                        android:maxLength="10" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/alternate_phone_number"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="2dp"
                    android:hint="Alternate Phone Number"
                    app:boxBackgroundColor="@color/white"
                    app:startIconDrawable="@drawable/ic_call">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/profile_alternate_ph_number"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="number"
                        android:maxLength="10" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/pin_code"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="2dp"
                    android:hint="Pin Code"
                    app:boxBackgroundColor="@color/white"
                    app:startIconDrawable="@drawable/ic_baseline_fiber_pin_24">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/profile_pin_code"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="number"
                        android:maxLength="6" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/state"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="2dp"
                    android:hint="State"
                    app:boxBackgroundColor="@color/white"
                    app:startIconDrawable="@drawable/ic_baseline_state_pin_24">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/profile_state"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="text"
                        android:maxLength="50" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/house_number_building_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="2dp"
                    android:hint="House Number, Building Name"
                    app:boxBackgroundColor="@color/white"
                    app:startIconDrawable="@drawable/ic_baseline_house_number_24">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/profile_hose_number_building_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="text"
                        android:maxLength="60" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/road_name_area_colony"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="2dp"
                    android:hint="Road Name, Area, Colony"
                    app:boxBackgroundColor="@color/white"
                    app:startIconDrawable="@drawable/ic_baseline_add_road_24">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/mobile"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="text"
                        android:maxLength="100" />

                </com.google.android.material.textfield.TextInputLayout>


            </androidx.appcompat.widget.LinearLayoutCompat>


        </androidx.appcompat.widget.LinearLayoutCompat>


    </androidx.appcompat.widget.LinearLayoutCompat>

    <com.google.android.material.button.MaterialButton
        android:layout_width="280dp"
        android:layout_height="55dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="20dp"
        android:background="@drawable/thankyou_btn_design"
        android:text="@string/go_to_payment" />



</RelativeLayout>