<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/green_700"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragment.HomeFragment">


    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:fontFamily="@font/poppins_medium"
        android:layout_marginTop="12dp"
        android:text="@string/app_name"
        android:textColor="@color/white"
        android:visibility="gone"
        android:textSize="25sp"
        />

    <androidx.appcompat.widget.SearchView
        android:id="@+id/search_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_marginLeft="12dp"
        android:layout_marginTop="12dp"
        android:layout_marginRight="12dp"
        android:background="@drawable/login_btn"
        android:iconifiedByDefault="false"
        android:layoutDirection="rtl"
        android:searchIcon="@null"
        android:theme="@style/ThemeOverlay.SearchView"
        app:closeIcon="@drawable/ic_baseline_close_24"
        app:defaultQueryHint="Red Rose"
        app:searchIcon="@drawable/ic_search" />

    <ListView
        android:id="@+id/search_list"
        android:elevation="4dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/search_bar"
        android:layout_marginLeft="12dp"
        android:layout_marginRight="12dp"
        android:divider="@color/white"
        android:dividerHeight="2dp"
        android:visibility="gone" />


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="80sp"
        android:id="@+id/main_layout"
        android:background="@drawable/pupular_flower_top_corner">

        <com.denzcoskun.imageslider.ImageSlider
            android:id="@+id/image_slider"
            android:layout_width="wrap_content"
            android:layout_height="160dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="20dp"
            app:iss_auto_cycle="true"
            app:iss_corner_radius="50"
            app:iss_delay="0"
            app:iss_period="1000" />

        <GridLayout
            android:id="@+id/grid_item_list"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_below="@id/image_slider"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="20dp"
            android:columnCount="4"
            android:rowCount="1">


            <androidx.cardview.widget.CardView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_row="0"
                android:layout_rowWeight="1"
                android:layout_column="0"
                android:layout_columnWeight="1"
                android:layout_marginLeft="20dp"
                android:layout_marginBottom="5dp"
                app:cardCornerRadius="20dp">

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <androidx.appcompat.widget.AppCompatImageView
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:layout_gravity="center"
                        android:background="@drawable/ic_chinese_plum_flower" />
                </androidx.appcompat.widget.LinearLayoutCompat>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_row="0"
                android:layout_rowWeight="1"
                android:layout_column="1"
                android:layout_columnWeight="1"
                android:layout_marginLeft="20dp"
                android:layout_marginBottom="5dp"
                app:cardCornerRadius="20dp">

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <androidx.appcompat.widget.AppCompatImageView
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:layout_gravity="center"
                        android:background="@drawable/third_flower_icon" />
                </androidx.appcompat.widget.LinearLayoutCompat>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_row="0"
                android:layout_rowWeight="1"
                android:layout_column="2"
                android:layout_columnWeight="1"
                android:layout_marginLeft="20dp"
                android:layout_marginBottom="5dp"
                app:cardCornerRadius="20dp">

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <androidx.appcompat.widget.AppCompatImageView
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:layout_gravity="center"
                        android:background="@drawable/gift" />
                </androidx.appcompat.widget.LinearLayoutCompat>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_row="0"
                android:layout_rowWeight="1"
                android:layout_column="3"
                android:layout_columnWeight="1"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="5dp"
                android:layout_marginBottom="5dp"
                app:cardCornerRadius="20dp">

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <androidx.appcompat.widget.AppCompatImageView
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:layout_gravity="center"
                        android:background="@drawable/teddy_bear" />
                </androidx.appcompat.widget.LinearLayoutCompat>
            </androidx.cardview.widget.CardView>


        </GridLayout>


        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/popular_item"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/grid_item_list"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="5dp"

            android:text="@string/popular_items"
            android:textSize="20sp" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/view_all"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/grid_item_list"
            android:layout_marginLeft="115dp"
            android:layout_marginTop="23dp"
            android:layout_marginRight="23dp"
            android:layout_toRightOf="@id/popular_item"
            android:text="@string/view_all"
            android:textColor="@color/green_200"
            android:textSize="15sp" />


        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/popular_item"
            android:layout_marginLeft="12dp"
            android:layout_marginTop="1dp"
            android:layout_marginRight="12dp" />


    </RelativeLayout>


</RelativeLayout>